# magic_mirror

./: .gitignore  MMM-HabitTracker.css  MMM-HabitTracker.js  Makefile  README.md  backend-package.json  backend.js  backend.py  config-example.js  docker-compose.yaml  ecosystem.config.js  magic-mirror-backend.service  module.js  node_helper.js  package-lock.json  package.json  requirements.txt  settings.js  settings.json  start-backend.sh
MMM-HabitTracker/: MMM-HabitTracker.css
backend/: Dockerfile  Makefile  __init__.py  app.py  config.py  pyproject.toml  routes.py  settings.json
backend/services/: action_clip_service.py  action_recognizer.py  test_service.py  webcam_monitor.py  webhook_broker.py
backend/templates/: index.html
docs/: old_README.md
frontend/src/components/: Menu.tsx
old_backend/: app.py  requirements.txt
old_frontend/: package-lock.json
old_frontend/src/app/: page.tsx
old_frontend/src/components/: Menu.tsx
scripts/: README.md  install-deps.sh  install-opencv.sh  install-python-deps.sh  setup-backend.sh  setup-systemd.sh
services/: action_recognizer.py  test-service.js  webcam-monitor.js
training/: Makefile  process_all_videos.py  process_clips_to_landmarks_video.py  process_clips_to_time_series.py  pyproject.toml  realtime_inference.py  split_clips.py  train_model.py
training/models/: action_recognition_model.pth  best_model.pth  label_encoder.pkl  model_info.pkl  scaler.pkl
